<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center"
        android:paddingHorizontal="56dp"
        android:paddingVertical="26dp"
        android:text="@string/title_search"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="12dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:cardBackgroundColor="@color/grey_3"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/grey_4"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="16dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/search"
                        android:src="@drawable/ic_search" />

                    <Space
                        android:layout_width="16dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_semibold"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            tools:text="Минск" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="8dp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:alpha="0.62"
                            android:background="@color/grey_6" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="8dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_semibold"
                            android:textColor="@color/grey_6"
                            android:textSize="16sp"
                            tools:text="Куда - Турция " />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="32dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="@font/inter_semibold"
        android:paddingHorizontal="16dp"
        android:text="@string/music_otletel"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="26dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_otletat" />
</LinearLayout>