<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_2"
    android:orientation="vertical"
    android:scrollIndicators="none"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="24dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/grey_3"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="4dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:drawableStart="@drawable/ic_airplain_search"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey_6"
                    android:textSize="16sp"
                    tools:text="Минск" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_4" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_search"
                        android:drawablePadding="8dp"
                        android:gravity="center_vertical"
                        android:textColor="@color/white"
                        android:textColorHint="@color/grey_6"
                        android:textSize="16sp"
                        tools:hint="Куда - Турция" />

                    <ImageView
                        android:id="@+id/clear_text"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/close"
                        android:src="@drawable/ic_close" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="26dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:cardBackgroundColor="@color/green_1"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="@string/mashrut"
                            android:src="@drawable/ic_category" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:gravity="center"
                    android:text="@string/mashrut"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:cardBackgroundColor="@color/blue_1"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="@string/kuda_ugodna"
                            android:src="@drawable/ic_network" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:gravity="center"
                    android:text="@string/kuda_ugodna"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:cardBackgroundColor="@color/dark_blue"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="@string/vxodne"
                            android:src="@drawable/ic_date" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:text="@string/vxodne" />
            </LinearLayout>

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:cardBackgroundColor="@color/orange_1"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="@string/goryochi_bilet"
                            android:src="@drawable/ic_fire" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:text="@string/goryochi_bilet" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="26dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:cardBackgroundColor="@color/grey_3"
            app:cardCornerRadius="16dp">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/item_popular_destenition" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>